scrollbar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ html {
     -webkit-text-size-adjust: 100%}
 body {
     margin: 0;
+    overflow-y: scroll
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
     display: block;
@@ -629,7 +630,7 @@ dd {
 }
 .header .container {
     padding: 0;
-    max-width: 100%;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -903,7 +904,8 @@ dd {
 #home .posts, #home .pageTitle, #home .pagination {
     width: 80%;
     float: left;
-    margin-right: 2.12766%;
+    margin-left: auto;
+    margin-right: auto;
     float: none;
     margin: 0 auto 1.5em;
 }
